# stacks-devnet-api

./: .dockerignore  CHANGELOG.md  Cargo.toml  Config.toml  Dockerfile  LICENSE  README.md  codecov.yaml  openapi.yml
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml
examples/: new-network-minimal.example.json  new-network.example.json
scripts/: deploy-api.sh  get-logs.sh  kind-deploy.sh  kind-redeploy.sh  redeploy-api.sh
src/: api_config.rs  config.rs  lib.rs  main.rs  responder.rs  routes.rs  template_parser.rs
src/resources/: configmap.rs  deployment.rs  mod.rs  pod.rs  pvc.rs  service.rs  stateful_set.rs  tests.rs
src/tests/: mod.rs
src/tests/fixtures/: contract-source.clar  deployment-plan.yaml  left.txt  network-manifest.yaml  project-manifest.yaml  right.txt  stacks-devnet-config.json
src/utils/: mod.rs  pod.rs  pvc.rs  service.rs
templates/: bitcoind-chain-coordinator-pod.template.yaml  bitcoind-chain-coordinator-service.template.yaml  bitcoind-configmap.template.yaml  bitcoind-node-pvc.template.yaml  bitcoind-pod.template.yaml  chain-coord-deployment-plan-configmap.template.yaml  chain-coord-devnet-configmap.template.yaml  chain-coord-namespace-configmap.template.yaml  chain-coord-project-dir-configmap.template.yaml  chain-coord-project-manifest-configmap.template.yaml  chain-coordinator-pod.template.yaml  namespace.template.yaml  stacks-api-configmap.template.yaml  stacks-api-pod.template.yaml  stacks-api-postgres-configmap.template.yaml  stacks-api-pvc.template.yaml  stacks-api-service.template.yaml  stacks-devnet-api.template.yaml  stacks-node-configmap.template.yaml  stacks-node-pod.template.yaml  stacks-node-pvc.template.yaml  stacks-node-service.template.yaml
templates/ci/: stacks-devnet-api.template.yaml
templates/configmaps/: bitcoind.template.yaml  chain-coord-deployment-plan.template.yaml  chain-coord-devnet.template.yaml  chain-coord-project-dir.template.yaml  chain-coord-project-manifest.template.yaml  stacks-blockchain-api-pg.template.yaml  stacks-blockchain-api.template.yaml  stacks-blockchain.template.yaml  stacks-signer-0.template.yaml  stacks-signer-1.template.yaml
templates/deployments/: bitcoind-chain-coordinator.template.yaml  stacks-blockchain.template.yaml
templates/initial-config/: kind.yaml  storage-class.yaml
templates/pvcs/: stacks-blockchain-api-pg.template.yaml
templates/services/: bitcoind-chain-coordinator.template.yaml  stacks-blockchain-api.template.yaml  stacks-blockchain.template.yaml  stacks-signer-0.template.yaml  stacks-signer-1.template.yaml
templates/stateful-sets/: stacks-blockchain-api.template.yaml  stacks-signer-0.template.yaml  stacks-signer-1.template.yaml
