[package]
name = "stacks-devnet-api"
version = "0.1.0"
edition = "2021"
authors = ["Micaiah Reid <micaiah@hiro.so>"]
description = "The Stacks Devnet API runs a server that can be used to deploy, delete, manage, and make requests to Stacks Devnets run on Kubernetes."
readme = "README.md"
exclude = ["examples/**", "scripts/**"]
homepage = "https://github.com/hirosystems/stacks-devnet-api"
repository = "https://github.com/hirosystems/stacks-devnet-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version="0.82.2", features = ["client", "runtime"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
futures = "0.3.28"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.8.23"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4.13"
http-body = "0.4.5"
hiro-system-kit = {version = "0.1.0", features = ["log"]}
strum_macros = "0.24.3"
strum = "0.24.1"
# clarity-repl = "1.8.0"
# clarity-repl = {version = "2.2.0", path = "../clarinet/components/clarity-repl" }
clarity-repl = {version = "2.2.1", git = "https://github.com/hirosystems/clarinet.git", rev="4bfe97652081691dd3a23a87def00ac241aebccc" }
# clarinet-files = {version = "1.0.3" }
# clarinet-files = {version = "2.2.0", path = "../clarinet/components/clarinet-files" }
clarinet-files = {version = "2.2.1", git = "https://github.com/hirosystems/clarinet.git", rev="4bfe97652081691dd3a23a87def00ac241aebccc" }
# clarinet-deployments = {version = "1.0.3" }
# clarinet-deployments = {version = "2.2.0", path = "../clarinet/components/clarinet-deployments" }
clarinet-deployments = {version = "2.2.1", git = "https://github.com/hirosystems/clarinet.git", rev="4bfe97652081691dd3a23a87def00ac241aebccc" }
# chainhook-types = "1.0"
chainhook-types = { version = "1.2",  git = "https://github.com/hirosystems/chainhook.git", rev="6c8a834" }
toml = "0.5.9"

[dev-dependencies]
tower-test = "0.4.0"
test-case = "3.1.0"
rand = "0.8.5"
serial_test = "2.0.0"

[features]
k8s_tests = []