[package]
name = "stacks-devnet-api"
version = "1.5.4"
edition = "2021"
authors = ["Micaiah Reid <micaiah@hiro.so>"]
description = "The Stacks Devnet API runs a server that can be used to deploy, delete, manage, and make requests to Stacks Devnets run on Kubernetes."
readme = "README.md"
exclude = ["examples/**", "scripts/**"]
homepage = "https://github.com/hirosystems/stacks-devnet-api"
repository = "https://github.com/hirosystems/stacks-devnet-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version="0.82.2", features = ["client", "runtime"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.8.23"
hyper = { version = "0.14", features = ["full"] }
tower = "0.5.2"
strum = { version = "0.27.1", features = ["derive"] }
toml = "0.5.9"

hiro-system-kit = { version = "0.1.0", features = ["log"] }
clarinet-files = "3"
clarinet-deployments = "3"

[dev-dependencies]
tower-test = "0.4.0"
test-case = "3.1.0"
pretty_assertions = "1.4.1"
rand = "0.8.5"
serial_test = "2.0.0"

[features]
k8s_tests = []

[patch.crates-io]
clarinet-files = { git = "https://github.com/hirosystems/clarinet.git", rev = "ca7c4e04f7ed40634773236be105147c2cccc660" }
clarinet-deployments = { git = "https://github.com/hirosystems/clarinet.git", rev = "ca7c4e04f7ed40634773236be105147c2cccc660" }
hiro-system-kit = { git = "https://github.com/hirosystems/clarinet.git", rev = "ca7c4e04f7ed40634773236be105147c2cccc660" }
